examples/test/testpolicy13433.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13433
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key48: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value33
          key34: value14
          key28: value24
      podSelector:
        matchLabels:
          key2: value10
